fix dark mode and href to assignment

--- a/style.css
+++ b/style.css
@@ -475,3 +475,100 @@ select:focus {
   border-color: #6db6ff;
   box-shadow: 0 0 5px rgba(109, 182, 255, 0.5);
 }
+
+/* --------------------------------------- */
+[type="checkbox"]:checked,
+[type="checkbox"]:not(:checked) {
+  position: absolute;
+  left: -9999px;
+  opacity: 0;
+  pointer-events: none;
+}
+.dark-light:checked + label,
+.dark-light:not(:checked) + label {
+  position: fixed;
+  top: 4%;
+  right: 11%;
+  z-index: 20000;
+  display: block;
+  border-radius: 50%;
+  width: 46px;
+  height: 46px;
+  cursor: pointer;
+  transition: all 200ms linear;
+  box-shadow: 0 0 25px rgba(255, 235, 167, 0.45);
+}
+.dark-light:checked + label {
+  transform: rotate(360deg);
+}
+.dark-light:checked + label:after,
+.dark-light:not(:checked) + label:after {
+  position: absolute;
+  content: "";
+  top: 1px;
+  left: 1px;
+  overflow: hidden;
+  z-index: 2;
+  display: block;
+  border-radius: 50%;
+  width: 44px;
+  height: 44px;
+  background-color: #102770;
+  background-image: url("https://assets.codepen.io/1462889/moon.svg");
+  background-size: 20px 20px;
+  background-repeat: no-repeat;
+  background-position: center;
+  transition: all 200ms linear;
+  opacity: 0;
+}
+.dark-light:checked + label:after {
+  opacity: 1;
+}
+.dark-light:checked + label:before,
+.dark-light:not(:checked) + label:before {
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 0;
+  overflow: hidden;
+  z-index: 1;
+  display: block;
+  border-radius: 50%;
+  width: 46px;
+  height: 46px;
+  background-color: #48dbfb;
+  background-image: url("https://assets.codepen.io/1462889/sun.svg");
+  background-size: 25px 25px;
+  background-repeat: no-repeat;
+  background-position: center;
+  transition: all 200ms linear;
+}
+
+body.dark-mode {
+  min-height: 100vh;
+  background: url(images/dark.png) center / cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.dark-mode.table {
+  background-color: rgba(0, 0, 0, 0.507);
+}
+
+.dark-mode.table__body {
+  background-color: rgba(103, 102, 105, 0.733);
+}
+
+.dark-mode thead th {
+  background-color: #3d3c3dfe;
+}
+
+.dark-mode .table__Subheader h1,
+.dark-mode .table__body th,
+.dark-mode .table__body tr,
+.dark-mode .table__Subheader p,
+.dark-mode .table__Subheader div {
+  color: #ffffff;
+}
